<resources>
    <string name="app_name">ToYou</string>
    <string name="appbar_title_main">To you</string>
    <string name="title_my">MY</string>
    <string name="name">이름</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="hint_name_message">사용할 이름을 작성해주세요</string>
    <string name="signup_name_saved">이름이 저장되었습니다</string>
    <string name="signup_invite">카카오톡으로 초대하기</string>
    <string name="signup_select_background">배경화면 고르기</string>
    <string name="signup_invite_message">상대방의 초대 코드를 입력해주세요</string>
    <string name="signup_my_code">내 초대 코드</string>
    <string name="link_message_button">다운받으러 가기!</string>
    <string name="link_message_content">님이 초대 메시지를 보냈습니다! \n초대 코드 : </string>
    <string name="fontname_nanum">NanumBarunGothic.ttf</string>
    <string name="fontname_nanum_bold">NanumBarunGothicBold.ttf</string>
    <string name="fontname_nanum_light">NanumBarunGothicLight.ttf</string>
    <string name="fontname_nanum_ultra_light">NanumBarunGothicUltraLight.ttf</string>
    <string name="fontname_fish_chips">FISH<![CDATA[&]]>CHIPS-Regular.ttf</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>
</resources>
