<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.semonemo.latte.toyouproject.view.SignupActivity"
    >

    <com.semonemo.latte.toyouproject.view.layout.AppbarLayout
        android:id="@+id/appbar_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/appbar_size"
        android:paddingLeft="@dimen/common_side_size"
        android:paddingRight="@dimen/common_side_size">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />

            <TextView
                android:id="@+id/tv_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/signup_name_saved"
                app:layout_constraintTop_toBottomOf="@id/et_name" />

            <Button
                android:id="@+id/btn_invate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_invite"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_comment" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cl_name">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/signup_select_background"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/iv_background_man"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="20dp"
                android:background="@color/colorPrimary"
                android:layout_width="@dimen/signup_background_image_size"
                android:layout_height="@dimen/signup_background_image_size" />

            <ImageView
                android:id="@+id/iv_background_woman"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="20dp"
                android:background="@color/bg_login_button"
                android:layout_width="@dimen/signup_background_image_size"
                android:layout_height="@dimen/signup_background_image_size" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_invite"
            app:layout_constraintTop_toBottomOf="@id/cl_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_invite_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_invite_message"/>
            <EditText
                android:id="@+id/et_invite_code"
                app:layout_constraintTop_toBottomOf="@id/tv_invite_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_my_code"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/et_invite_code"
                android:layout_height="wrap_content"
                android:text="@string/signup_my_code"/>
            <TextView
                android:id="@+id/tv_my_invite_code"
                app:layout_constraintTop_toBottomOf="@id/tv_my_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
